# frbit

./: .gitignore  .markdownlint.json  CLAUDE.md  README.md  bug_report_structured.py  config.json  mypy.ini  prompt_proyecto.md  pyrightconfig.json  quick_projector_detect.py  reporte_consolidado.py
waypoint-navigator/: .coveragerc  .env.example  .gitignore  CONTROL_GAP_MATRIX.md  INTERFACE_GAP_MATRIX.md  KNOWLEDGE_BASE.md  LIVE_TEST_PLAN_v3.md  QA_PRODUCCION.md  README.md  ROI_CAPTURE_GUIDE.md  TRADE_DEPOT_GAP_MATRIX.md  __main__.py  build.spec  chat_config.json  combat_config.json  combat_config_druid.json  combat_config_paladin.json  combat_config_sorcerer.json  condition_config.json  depot_config.json  detector_config.json  heal_config.json  hpmp_config.json  loot_config.json  main.py  minimap_config.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  trade_config.json
waypoint-navigator/.claude/: settings.local.json
waypoint-navigator/buy_blessing/: setup_ek_enhanced.json  setup_mage.json  setup_rp.json  setup_rp_enhanced.json  waypoints.in
waypoint-navigator/cache/: custom_waypoints.json  learned_walkability.json  learned_walkability.pre_corridor_reset_2026-04-02_2028.json  transitions.json
waypoint-navigator/data/: druid_spells.json  knight_spells.json  monsters.json  paladin_spells.json  sorcerer_spells.json
waypoint-navigator/examples/: _clean_output.py  auto_walker.py  basic_navigation.py  capture_templates.py  city_routes.py  deposit_demo.py  diag_hpmp.py  diag_inputs.py  download_monster_templates.py  export_route_json.py  healer_demo.py  input_bridge.py  live_tracker.py  looter_demo.py  minimap_sim.py  multi_session_example.json  multi_waypoint_route.py  obs_demo.py  obs_waypoint_tracker.py  run_monitor.py  scan_roi.py  script_runner.py  session_demo.py  test_bot.py  waypoint_search.py
waypoint-navigator/general/: dp_to_train_oramond.in  dp_to_train_yalahar.in  refill_ankrahmun.in  refill_edron.in  refill_kazz.in  refill_oramond.in  refill_port_hope.in  refill_svargrond.in  refill_yalahar.in  train_to_dp_oramond.in
waypoint-navigator/human_input_system/: __init__.py  config.yaml
waypoint-navigator/pico2/: README.md  boot.py  code.py
waypoint-navigator/routes/: README.md
waypoint-navigator/src/: __init__.py  action_verifier.py  adaptive_roi.py  alert_system.py  anti_kick.py  break_scheduler.py  calibrator.py  character_detector.py  chat_responder.py  client_actions.py  combat_manager.py  combat_manager_helpers.py  combat_manager_loop.py  condition_monitor.py  config_paths.py  dashboard.html  dashboard_server.py  death_handler.py  depot_manager.py  depot_manager_runtime.py  depot_orchestrator.py  deprecated_ocr.py  detector_config.py  event_bus.py  frame_cache.py  frame_capture.py  frame_quality.py  frame_sources.py  frame_watchdog.py  game_data.py  gm_detector.py  healer.py  healer_runtime.py  hpmp_detector.py  humanizer.py  image_processing.py  input_backends.py  input_controller.py  inventory_manager.py  looter.py  (+56 more)
waypoint-navigator/tests/: conftest.py  test_action_verifier.py  test_action_verifier_coverage.py  test_adaptive_roi.py  test_alert_system.py  test_anti_kick.py  test_arduino_hid.py  test_b25.py  test_break_scheduler.py  test_calibration.py  test_calibrator.py  test_calibrator_coverage.py  test_character_detector.py  test_chat_responder.py  test_client_actions.py  test_combat.py  test_combat_coverage.py  test_combat_fase5.py  test_combat_new.py  test_conditions.py  test_config_validation.py  test_convert_cloudbot.py  test_dashboard_coverage.py  test_dashboard_server.py  test_death_reconnect.py  test_depot_coverage.py  (+84 more)
(+245 files in other folders)
